# wecom-app-svr

./: README.md  pyproject.toml
demo/: demo.py
src/wecom_app_svr/: __init__.py  app.py  passive_rsp_msg.py  req_msg.py
