[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[project]
name = "wecom-app-svr"
version = "0.1.0"
authors = [
    { name = "panzhongxian", email = "panzhongxian0532@gmail.com" },
]
description = "WeCom App Callback Server Simple Framework"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "Flask>=3.0.0",
    "wx-crypt>=0.0.2",
]

[project.urls]
Homepage = "https://github.com/easy-wx/wecom-app-svr"
Issues = "https://github.com/easy-wx/wecom-app-svr/issues"
